Lp/availability submission calls (#19)
* Availability calls, WIP

* Add JsonDoNotSerializeAttribute to prevent build errors

* Edit, but it works (at least 90%)

Create has been working, now Edit's the problem child.
1. Inputting a DateTime for the AvailabilitySlots thing is a little odd, due to timezones. The time submission should be formatted like `"2026-03-02T11:00Z"`, with reference to UTC. so T11:00 means 6am.
    - Note: Schedule's startTime and endTime are not stored with timezones (afaik).

* remove the redundant generateLink and add the Get call

---------
